fix the visibility bug

--- a/pages/choiсe/style.css
+++ b/pages/choiсe/style.css
@@ -72,7 +72,7 @@
     height: 68px;
     background: #FFFFFF;
     border: 1px solid #A2A0A8;
-    border-radius: 15px;
+    border-radius: 5px;
     margin-top: 15px;
     display: flex;
     justify-content: space-between;
